--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,8 @@
 }
 
 * {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -24,9 +26,15 @@ header {
 }
 
 header h1 {
-    font-size: 3em;
+    position: fixed;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    text-align: center;
+    font-weight: 700;
+    font-size: 3.5em;
     color: white;
-    margin: 0;
+    /* margin: 0 auto; */
     padding-top: 45vh;
 }
 
@@ -50,7 +58,8 @@ section {
 }
 
 h2 {
-    font-size: 2em;
+    font-weight: 700;
+    font-size: 2.5em;
 }
 
 p {
@@ -100,31 +109,39 @@ article {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    height: 30vh;
+    height: 35vh;
+    margin: 4vw 0;
+    cursor: pointer;
+}
+
+article .info {
+    position: absolute;
+    color: black;
+    background-color: white;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: auto;
+    padding: 20px;
 }
 
 article h3 {
-    position: absolute;
-    bottom: 40px;
+    font-weight: 400;
     font-size: 1.5em;
-    padding: 5px;
-    width: 100%;
-    background-color: white;
-    color: black;
 }
 
 article .tags {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    height: 40px;
     display: flex;
     flex-direction: row;
 }
 
 article .tags p {
-    margin: 5px;
+    font-weight: 300;
+    font-size: 0.8em;
+    margin: 10px 10px 0 0;
     background-color: rgb(49, 49, 49);
     color: white;
+    border-radius: 5px;
+    padding: 5px 8px;
 }
