--- a/styles/home.css
+++ b/styles/home.css
@@ -13,8 +13,14 @@
 
 main {
     margin: 0;
-    padding: 0 4vw;
+    padding: 4vw 4vw 0 4vw;
     background-color: var(--background);
+    border-radius: 15px 15px 0 0;
+}
+
+nav {
+    position: fixed;
+    z-index: 100;
 }
 
 header {
@@ -34,7 +40,6 @@ header h1 {
     font-weight: 700;
     font-size: 3.5em;
     color: white;
-    /* margin: 0 auto; */
     padding-top: 45vh;
 }
 
@@ -112,11 +117,11 @@ article {
     height: 35vh;
     margin: 4vw 0;
     cursor: pointer;
+    border-radius: 15px;
 }
 
 article .info {
     position: absolute;
-    color: black;
     background-color: white;
     bottom: 0;
     left: 0;
@@ -126,17 +131,18 @@ article .info {
     padding: 20px;
 }
 
-article h3 {
+h3 {
     font-weight: 400;
     font-size: 1.5em;
+    color: black;
 }
 
-article .tags {
+.tags {
     display: flex;
     flex-direction: row;
 }
 
-article .tags p {
+.tags p {
     font-weight: 300;
     font-size: 0.8em;
     margin: 10px 10px 0 0;
@@ -144,4 +150,13 @@ article .tags p {
     color: white;
     border-radius: 5px;
     padding: 5px 8px;
+}
+
+.more {
+    position: relative;
+    border-radius: 15px;
+    background-color: white;
+    height: auto;
+    background-image: none;
+    padding: 20px;
 }
