--- a/styles/home.css
+++ b/styles/home.css
@@ -1,19 +1,6 @@
-:root {
-    --background: rgb(30, 29, 43);
-}
-
-* {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    overflow-x: hidden;
-}
-
 main {
     margin: 0;
-    padding: 4vw 4vw 0 4vw;
+    padding: 4vw 4vw 10vw 4vw;
     background-color: var(--background);
     border-radius: 15px 15px 0 0;
 }
