--- a/styles/project.css
+++ b/styles/project.css
@@ -1,26 +1,7 @@
-:root {
-    --background: rgb(30, 29, 43);
-}
-
-* {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    overflow-x: hidden;
-}
-
 main {
     margin: 0;
-    padding: 4vw 4vw 0 4vw;
-    /* background-color: var(--background); */
-    /* border-radius: 15px 15px 0 0; */
-}
-
-nav {
-    position: fixed;
-    z-index: 100;
+    padding: 10vw 4vw 4vw 4vw;
+    background: linear-gradient(180deg, rgba(var(--gradient), 0) 0%, rgba(var(--gradient), 1) 10%);
 }
 
 header {
@@ -62,7 +43,7 @@ article {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    height: 35vh;
+    height: 45vh;
     margin: 4vw 0;
     cursor: pointer;
     border-radius: 15px;
