first site iteration

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,4 @@
 main {
-    margin: 0;
     padding: 4vw 4vw 10vw 4vw;
     background-color: var(--background);
     border-radius: 15px 15px 0 0;
@@ -14,20 +13,13 @@ header {
     position: relative;
     height: 95vh;
     width: 100vw;
+    max-width: 100%;
     text-align: center;
     z-index: -1;
 }
 
 header h1 {
     position: fixed;
-    left: 0;
-    right: 0;
-    width: 100vw;
-    text-align: center;
-    font-weight: 700;
-    font-size: 3.5em;
-    color: white;
-    padding-top: 45vh;
 }
 
 header img {
@@ -46,17 +38,6 @@ header img {
 
 section {
     z-index: 1;
-    color: white;
-}
-
-h2 {
-    font-weight: 700;
-    font-size: 2.5em;
-}
-
-p {
-    margin: 2vh 0;
-    font-size: 1.2em;
 }
 
 .skills {
@@ -105,23 +86,25 @@ article {
     margin: 4vw 0;
     cursor: pointer;
     border-radius: 15px;
+    box-shadow: var(--box-shadow);
 }
 
 article .info {
     position: absolute;
-    background-color: white;
+    background-color: var(--card-background);
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
+    width: calc(100% - padding);
     height: auto;
     padding: 20px;
+    border-radius: 0 0 15px 15px;
 }
 
 h3 {
     font-weight: 400;
     font-size: 1.5em;
-    color: black;
+    color: white;
 }
 
 .tags {
@@ -133,8 +116,8 @@ h3 {
     font-weight: 300;
     font-size: 0.8em;
     margin: 10px 10px 0 0;
-    background-color: rgb(49, 49, 49);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: var(--card-background);
     border-radius: 5px;
     padding: 5px 8px;
 }
@@ -142,8 +125,16 @@ h3 {
 .more {
     position: relative;
     border-radius: 15px;
-    background-color: white;
+    background-color: var(--card-background);
     height: auto;
     background-image: none;
     padding: 20px;
+    box-shadow: var(--box-shadow);
+}
+
+@media (min-width:1281px)  { /* navigation sidebar breakpoint */
+    main>section, header h1, header img {
+        width: calc(100% - var(--nav-width));
+        padding-left: var(--nav-width);
+    }
 }
