--- a/styles/project.css
+++ b/styles/project.css
@@ -1,27 +1,20 @@
 main {
-    margin: 0;
-    padding: 10vw 4vw 4vw 4vw;
-    background: linear-gradient(180deg, rgba(var(--gradient), 0) 0%, rgba(var(--gradient), 1) 10%);
+    padding: 4vw 4vw 10vw 4vw;
+    background-color: var(--background);
+    border-radius: 15px 15px 0 0;
 }
 
 header {
     position: relative;
     height: 95vh;
     width: 100vw;
+    max-width: 100%;
     text-align: center;
     z-index: -1;
 }
 
 header h1 {
     position: fixed;
-    left: 0;
-    right: 0;
-    width: 100vw;
-    text-align: center;
-    font-weight: 700;
-    font-size: 3.5em;
-    color: white;
-    padding-top: 45vh;
 }
 
 header img {
@@ -38,7 +31,19 @@ header img {
     z-index: -1;
 }
 
-article {
+section:first-child h2 {
+    margin-top: 0;
+    text-align: center;
+}
+
+section:first-child p {
+    max-width: 30em;
+    margin: 0 auto;
+    margin-bottom: 6vw;
+}
+
+section:nth-child(2) a {
+    display: block;
     background-image: url(https://source.unsplash.com/collection/98508412/);
     background-repeat: no-repeat;
     background-size: cover;
@@ -47,36 +52,68 @@ article {
     margin: 4vw 0;
     cursor: pointer;
     border-radius: 15px;
+    box-shadow: var(--box-shadow);
 }
 
-article .info {
+section a .info {
     position: absolute;
-    background-color: white;
+    background-color: var(--card-background);
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
+    width: calc(100% - padding);
     height: auto;
     padding: 20px;
+    border-radius: 0 0 15px 15px;
 }
 
 h3 {
     font-weight: 400;
     font-size: 1.5em;
-    color: black;
+    color: white;
 }
 
 .tags {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .tags p {
     font-weight: 300;
     font-size: 0.8em;
     margin: 10px 10px 0 0;
-    background-color: rgb(49, 49, 49);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: var(--card-background);
     border-radius: 5px;
+    box-shadow: var(--box-shadow);
     padding: 5px 8px;
+}
+
+@media (min-width:750px) {
+ section:nth-child(2) {
+     display: grid;
+     grid-template-columns: 1fr 1fr;
+     grid-template-rows: auto;
+     grid-column-gap: clamp(25px, 4vw, 100px);
+     grid-row-gap: clamp(25px, 4vw, 100px);
+ }
+
+ section a {
+     margin: 0 !important;
+ }
+}
+
+@media (min-width:1600px) {
+    section:nth-child(2) {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+
+@media (min-width:1281px)  { /* navigation sidebar breakpoint */
+    main>section, header h1, header img {
+        width: calc(100% - var(--nav-width));
+        padding-left: var(--nav-width);
+    }
 }
