--- a/styles/var.css
+++ b/styles/var.css
@@ -1,8 +1,11 @@
 :root {
-    --background: rgb(30, 29, 43);
-    --gradient: 30, 29, 43; 
+    --background: rgb(255, 255, 255);
+    --card-background: rgb(58, 58, 58);
+    --card-value: 58, 58, 58; 
     /* gradient contains values of background */
     --footer: rgb(32, 32, 32);
+    --box-shadow: 5px 5px 8px 0px rgba(var(--card-value), 0.85);
+    --nav-width: 5vw;
 }
 
 * {
@@ -11,5 +14,30 @@
     margin: 0;
     padding: 0;
     font-size: 16px;
-    overflow-x: hidden;
+}
+
+header h1 {
+    left: 0;
+    right: 0;
+    width: 100vw;
+    max-width: 100%;
+    text-align: center;
+    font-weight: 700;
+    font-size: 3.5em;
+    color: white;
+    padding-top: 45vh;
+    text-shadow: 3px 3px 1px rgba(var(--card-value), 0.75);
+}
+
+h2 {
+    margin-top: 4vw;
+    margin-bottom: 2vw;
+    font-weight: 400;
+    font-size: 2.5em;
+}
+
+p {
+    margin: 4vw 0;
+    font-size: 1.2em;
+    font-weight: 300;
 }
