--- a/styles/item.css
+++ b/styles/item.css
@@ -1,20 +1,39 @@
 header {
     position: relative;
-    height: 80vh;
+    height: 95vh;
     width: 100vw;
     max-width: 100%;
     text-align: center;
     z-index: -1;
-    border-radius: 0 0 10vw 10vw;
 }
 
 header h1 {
-    position: relative;
-    padding-top: 35vh;
+    white-space: nowrap;
+    position: fixed;
+}
+
+header img {
+    position: fixed;
+    -webkit-backface-visibility: hidden;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    z-index: -1;
+    margin: 0 auto;
 }
 
 .tags {
+    padding-top: 52vh;
     display: flex;
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
@@ -31,22 +50,11 @@ header h1 {
     padding: 5px 8px;
 }
 
-header img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-    z-index: -1;
-    border-radius: 0 0 10vw 10vw;
-}
-
 main {
+    position: relative;
     padding: 10vw 4vw 4vw 4vw;
+    background-color: var(--background);
+    border-radius: 15px 15px 0 0;
 }
 
 h3 {
@@ -77,7 +85,7 @@ p a {
 }
 
 .images img:hover {
-    max-height: 50vh;
+    max-height: 90vh;
 }
 
 @media (min-width:801px)  {
@@ -92,7 +100,16 @@ p a {
         z-index: 10;
     }
 
+    header h1 {
+        position: absolute;
+    }
+
+    .tags {
+        position: absolute;
+    }
+
     header img {
+        position: absolute;
         border-radius: 0 30px 30px 0;
     }
 
