--- a/styles/var.css
+++ b/styles/var.css
@@ -6,6 +6,7 @@
     --footer: rgb(32, 32, 32);
     --box-shadow: 5px 5px 8px 0px rgba(var(--card-value), 0.85);
     --nav-width: 5vw;
+    --padding-main: 4vw;
 }
 
 * {
@@ -25,19 +26,18 @@ header h1 {
     font-weight: 700;
     font-size: 3.5em;
     color: white;
-    padding-top: 45vh;
+    padding-top: 40vh;
     text-shadow: 3px 3px 1px rgba(var(--card-value), 0.75);
 }
 
 h2 {
     margin-top: 4vw;
-    margin-bottom: 2vw;
+    margin-bottom: clamp(20px, 2vw, 40px);
     font-weight: 400;
-    font-size: 2.5em;
+    font-size: clamp(1.8em, 6vw, 2.5em);
 }
 
 p {
-    margin: 4vw 0;
     font-size: 1.2em;
     font-weight: 300;
 }
