--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,6 @@
 main {
     padding: var(--padding-main);
     padding-top: 20px;
-    /* padding-bottom: 10vw; */
     background-color: var(--background);
     border-radius: 15px 15px 0 0;
 }
@@ -13,24 +12,14 @@ header {
     max-width: 100%;
     text-align: center;
     z-index: -1;
+    background-image: url(../img/profile.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 header h1 {
     position: fixed;
-}
-
-header img {
-    position: fixed;
-    -webkit-backface-visibility: hidden;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-    display: block;
-    z-index: -1;
 }
 
 section {
@@ -38,7 +27,13 @@ section {
 }
 
 .intro {
-    max-width: 400px;
+    max-width: 550px;
+}
+
+.intro a {
+    font-size: inherit;
+    color: inherit;
+    text-decoration: underline;
 }
 
 .skills div:nth-child(1) {
@@ -166,14 +161,17 @@ a.more {
     text-decoration: none;
     display: flex;
     align-items: center;
+    justify-content: center;
     position: relative;
     border-radius: 15px;
     background-color: var(--card-background);
-    height: 8vh;
-    max-height: 40px;
+    height: 40px;
+    width: auto;
     background-image: none;
     padding: 20px;
     box-shadow: var(--box-shadow);
+    margin: 0 auto;
+    margin-top: 4vw;
 }
 
 @media (min-width:800px) {
@@ -209,8 +207,12 @@ a.more {
         grid-row-gap: clamp(25px, 4vw, 100px);
     }
 
-    section a {
+    section a:not(.more) {
         margin: 0 !important;
+    }
+
+    a.more {
+        width: 50%;
     }
 }
 
