--- a/styles/var.css
+++ b/styles/var.css
@@ -17,7 +17,33 @@
     font-size: 16px;
 }
 
+header {
+    position: relative;
+    height: 95vh;
+    width: 100vw;
+    max-width: 100%;
+    text-align: center;
+    z-index: -1;
+}
+
+header img {
+    position: fixed;
+    -webkit-backface-visibility: hidden;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    z-index: -1;
+    margin: 0 auto;
+}
+
 header h1 {
+    white-space: nowrap;
+    position: fixed;
     left: 0;
     right: 0;
     width: 100vw;
