--- a/styles/cards.css
+++ b/styles/cards.css
@@ -30,6 +30,10 @@
     background-image: url(../img/projects/icov/head.jpg);
 }
 
+.projects a:nth-child(3) {
+    background-image: url(../img/projects/menu/head.jpg);
+}
+
 .projects a .info {
     position: absolute;
     background-color: var(--card-background);
