--- a/styles/home.css
+++ b/styles/home.css
@@ -23,7 +23,7 @@ section {
 .intro a {
     font-size: inherit;
     color: inherit;
-    text-decoration: underline;
+    text-decoration: underline solid var(--accent);
 }
 
 .skills div:nth-child(1) {
@@ -74,7 +74,7 @@ section {
 
 .skills div:nth-child(1) p::after {
     border-radius: 10px 2px 2px 10px;
-    background-color: #73d5e4;
+    background-color: var(--accent);
 }
 
 .skills div:nth-child(1) p:nth-child(1):after {
