--- a/styles/cards.css
+++ b/styles/cards.css
@@ -34,6 +34,10 @@
     background-image: url(../img/projects/menu/head.jpg);
 }
 
+.projects a:nth-child(4) {
+    background-image: url(../img/projects/pintreddit/head.jpg);
+}
+
 .projects a .info {
     position: absolute;
     background-color: var(--card-background);
