--- a/styles/hobbies.css
+++ b/styles/hobbies.css
@@ -24,25 +24,21 @@ section {
     position: relative;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: stretch;
-    align-content: stretch;
-    justify-content: center;
+    height: clamp(400px, 15vw, 200px);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
 }
 
 section div {
     flex: 1 1 auto;
     width: auto;
-    height: clamp(100px, 15vw, 200px);
+    height: auto;
     transition: all 1s ease;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
-    transform:translatez(0);
-    -webkit-transform:translatez(0);
+    -webkit-transform: translate3d(0,0,1px); 
+    -webkit-backface-visibility: hidden;
 }
 
 section div:hover {
@@ -95,4 +91,10 @@ section:nth-of-type(3) div:nth-child(3) {
 
 section:nth-of-type(3) div:nth-child(4) {
     background-image: url(../img/hobbies/gallery3.4.jpg);
+}
+
+@media (min-width:550px) {
+    section {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
