--- a/styles/cards.css
+++ b/styles/cards.css
@@ -20,6 +20,7 @@
     cursor: pointer;
     border-radius: 15px;
     box-shadow: var(--box-shadow);
+    overflow: hidden;
 }
 
 .projects a:nth-child(1) {
@@ -98,6 +99,43 @@ a.more {
     margin: 0 auto;
     margin-top: 4vw;
 }
+
+/* -----------------------------CSS shine effect source: https://jsfiddle.net/AntonTrollback/nqQc7/ */
+.projects a:after {
+    content: "";
+    position: absolute;
+    top: -110%;
+    left: -210%;
+    width: 200%;
+    height: 200%;
+    opacity: 0;
+    transform: rotate(30deg);
+    
+    background: rgba(255, 255, 255, 0.13);
+    background: linear-gradient(
+      to right, 
+      rgba(255, 255, 255, 0.0) 0%,
+      rgba(255, 255, 255, 0.13) 77%,
+      rgba(255, 255, 255, 0.5) 92%,
+      rgba(255, 255, 255, 0.0) 100%
+    );
+    cursor: pointer;
+  }
+  
+  .projects a:hover:after {
+    opacity: 1;
+    top: -30%;
+    left: -30%;
+    transition-property: left, top, opacity;
+    transition-duration: 0.7s, 0.7s, 0.15s;
+    transition-timing-function: ease;
+    cursor: pointer;
+  }
+  
+  .projects a:active:after {
+    opacity: 0;
+  }
+  /* ---------------------------------------------------------------------------------------------------- */
 
 @media (min-width:750px) {
     .projects {
