--- a/styles/var.css
+++ b/styles/var.css
@@ -22,7 +22,10 @@ header {
     position: relative;
     height: 95vh;
     width: 100vw;
+    max-height: 95vh;
     max-width: 100%;
+    min-height: 95vh;
+    min-width: calc(100vw - var(--nav-width));
     text-align: center;
     z-index: -1;
 }
@@ -36,6 +39,10 @@ header img {
     right: 0;
     width: 100%;
     height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
     display: block;
     z-index: -1;
