--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,3 +1,15 @@
+.projects {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 45vh;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+}
+
+.homegrid {
+    grid-template-rows: repeat(2, 45vh);
+}
+
 .projects h2 {
     margin-top: 0;
     text-align: center;
@@ -15,10 +27,9 @@
     background-size: cover;
     background-position: center;
     position: relative;
-    height: 45vh;
-    margin: 4vw 0;
+    height: 100%;
     cursor: pointer;
-    border-radius: 15px;
+    border-radius: 3px;
     box-shadow: var(--box-shadow);
     overflow: hidden;
 }
@@ -61,7 +72,7 @@
     width: calc(100% - padding);
     height: auto;
     padding: 20px;
-    border-radius: 0 0 15px 15px;
+    border-radius: 0 0 3px 3px;
 }
 
 h3 {
@@ -93,7 +104,7 @@ a.more {
     align-items: center;
     justify-content: center;
     position: relative;
-    border-radius: 15px;
+    border-radius: 3px;
     background-color: var(--card-background);
     height: 40px;
     width: auto;
@@ -141,26 +152,79 @@ a.more {
   }
   /* ---------------------------------------------------------------------------------------------------- */
 
-@media (min-width:750px) {
+@media (min-width:1000px) {
     .projects {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        grid-column-gap: clamp(25px, 4vw, 100px);
-        grid-row-gap: clamp(25px, 4vw, 100px);
+        grid-template-columns: repeat(3, 1fr);
     }
 
-    .projects a:not(.more) {
-        margin: 0 !important;
+    .projects a:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 3;
+    }
+    
+    .projects a:nth-child(2) {
+        grid-area: 1 / 3 / 3 / 4;
+    }
+    
+    .projects a:nth-child(3) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+    
+    .projects a:nth-child(4) {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+    
+    .projects a:nth-child(5) {
+        grid-area: 3 / 1 / 4 / 3;
+    }
+    
+    .projects a:nth-child(6) {
+        grid-area: 3 / 3 / 4 / 4;
+    }
+    
+    .projects a:nth-child(7) {
+        grid-area: 4 / 1 / 5 / 4 ;
     }
 
-    a.more {
-        width: 50%;
+    .projects a .info .tags {
+        max-height: 0;
+        transition: all 0.4s ease;
+    }
+
+    .projects a:hover .info .tags {
+        max-height: 100px;
     }
 }
 
-@media (min-width:1600px) {
+@media (min-width:550px) and (max-width: 1000px) {
     .projects {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .projects a:nth-child(1) {
+        grid-area: 1 / 1 / 3 / 2;
+    }
+    
+    .projects a:nth-child(2) {
+        grid-area: 1 / 2 / 3 / 3;
+    }
+    
+    .projects a:nth-child(3) {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+    
+    .projects a:nth-child(4) {
+        grid-area: 3 / 2 / 4 / 3;
+    }
+    
+    .projects a:nth-child(5) {
+        grid-area: 4 / 1 / 5 / 2;
+    }
+    
+    .projects a:nth-child(6) {
+        grid-area: 4 / 2 / 6 / 3;
+    }
+    
+    .projects a:nth-child(7) {
+        grid-area: 5 / 1 / 6 / 2 ;
     }
 }
