--- a/styles/home.css
+++ b/styles/home.css
@@ -36,7 +36,7 @@ section>p {
 
 .skills div:nth-child(2) p {
     margin: 0 10px 10px 0;
-    border-radius: 5px;
+    border-radius: 3px;
     padding: 5px 10px;
     color: white;
     background-color: var(--card-background);
@@ -61,13 +61,13 @@ section>p {
 }
 
 .skills div:nth-child(1) p::before {
-    border-radius: 10px;
+    border-radius: 3px;
     width: 100%;
     background-color: #d9f6fa;
 }
 
 .skills div:nth-child(1) p::after {
-    border-radius: 10px 2px 2px 10px;
+    border-radius: 3px 0 0 3px;
     background-color: var(--accent);
 }
 
