--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,13 +1,13 @@
 .projects {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-auto-columns: 1fr;
     grid-auto-rows: 45vh;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
 }
 
 .homegrid {
-    grid-template-rows: repeat(2, 45vh);
+    /* grid-template-rows: repeat(2, 45vh); */
 }
 
 .projects h2 {
